
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ IS_HIGHBIT_SET (unsigned char) ;
 scalar_t__ isupper (unsigned char) ;
 unsigned char tolower (unsigned char) ;

int
pg_strncasecmp(const char *s1, const char *s2, size_t n)
{
 while (n-- > 0)
 {
  unsigned char ch1 = (unsigned char) *s1++;
  unsigned char ch2 = (unsigned char) *s2++;

  if (ch1 != ch2)
  {
   if (ch1 >= 'A' && ch1 <= 'Z')
    ch1 += 'a' - 'A';
   else if (IS_HIGHBIT_SET(ch1) && isupper(ch1))
    ch1 = tolower(ch1);

   if (ch2 >= 'A' && ch2 <= 'Z')
    ch2 += 'a' - 'A';
   else if (IS_HIGHBIT_SET(ch2) && isupper(ch2))
    ch2 = tolower(ch2);

   if (ch1 != ch2)
    return (int) ch1 - (int) ch2;
  }
  if (ch1 == 0)
   break;
 }
 return 0;
}
